Added DAO layer and dtos. Added DAO tests and modified existing tests accordingly.
